--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,11 +40,27 @@ jobs:
         run: npm ci
         continue-on-error: false
 
+      - name: Fix optional dependencies (if needed)
+        run: |
+          if [ ! -d "node_modules/@rollup" ]; then
+            echo "Rollup optional dependencies missing, reinstalling..."
+            rm -rf node_modules package-lock.json
+            npm install
+          fi
+        continue-on-error: true
+
       - name: Verify Node.js version
         run: node --version && npm --version && echo "Vite version:" && npx vite --version
 
       - name: Build
-        run: npm run build
+        run: |
+          echo "Attempting build with current dependencies..."
+          npm run build || (
+            echo "Build failed, attempting to fix optional dependencies..."
+            rm -rf node_modules/@rollup
+            npm install
+            npm run build
+          )
         continue-on-error: false
 
       - name: List build output
