--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "gh-pages": "^6.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
     "recharts": "^3.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^6.1.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "NODE_ENV=production vite build",
+    "build": "cross-env NODE_ENV=production vite build",
     "preview": "vite preview",
     "test": "vitest",
     "deploy": "gh-pages -d build",
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/node": "^20.19.17",
     "@vitejs/plugin-react": "^5.0.3",
+    "cross-env": "^10.0.0",
     "vite": "^7.1.7"
   }
 }
